--- a/README
+++ b/README
@@ -10,18 +10,11 @@ To start a server, you should do inside the project folder:
 
     [play-java] $ run 9000
 
-To start a second server, you must change the port in chat.scala.html (ln 63):
-
-    //create a new WebSocket object.
-    			var wsUri = "ws://localhost:9001/chat";
-    			websocket = new WebSocket(wsUri);
-
-and in application.conf (ln 54):
+To start a second server, you must change the port in application.conf (ln 54):
 
         remote {
                 log-remote-lifecycle-events = off
                 netty.tcp {
-                  //"akka.remote.netty.tcp.port=8000"
                   hostname = "127.0.0.1"
                   port = 8001
                 }
